--- a/PortfolioProject/ClientApp/src/style/sass/style.sass
+++ b/PortfolioProject/ClientApp/src/style/sass/style.sass
@@ -102,11 +102,6 @@ body
         left: 0
         width: 100%
         height: 100%
-    &__right
-        right: 0
-        opacity: 0
-    &__left
-        left: 0
     &__right,
     &__left
         display: flex
@@ -117,9 +112,32 @@ body
         height: 100%
         background: #2C3034
         color: white
+        h1
+            font-size: 100px
+            font-weight: bold
+            margin: 20px 0px 20px 60px
+            width: 50vw
+        p
+            margin: 20px 0px 20px 60px
+            text-transform: uppercase
+            font-weight: 500
+            width: 50vw
+            span
+                color: dodgerblue
+                font-weight: bold
+        .signup-button
+            margin: 20px 0px
+            margin-left: 60px
+            background: dodgerblue
+            border: none
+            padding: 10px 30px
+            color: white
+            font-weight: bold
+            width: 200px
         h2,
         form
             margin-left: 60px
+            z-index: 9999
         h2 
             margin-bottom: 50px
             font-size: 60px
@@ -148,16 +166,20 @@ body
                     background: dodgerblue
                     border: none
                     padding: 10px 30px
+                    margin-left: 0
                     color: white
                     font-weight: bold
-.frontside
-    width: 100%
-    height: 100%
-    position: absolute
     &__right
         right: 0
     &__left
         left: 0
+        z-index: 999
+        background: white
+        color: #2C3034
+.frontside
+    width: 100%
+    height: 100%
+    position: absolute
     &__right,
     &__left
         display: flex
@@ -167,14 +189,19 @@ body
         width: 50%
         height: 100%
         color: #2C3034
+        background: white
+        overflow: hidden
+        transition-duration: 1s
         h1
             font-size: 100px
             font-weight: bold
             margin: 20px 0px 20px 60px
+            width: 50vw
         p
             margin: 20px 0px 20px 60px
             text-transform: uppercase
             font-weight: 500
+            width: 50vw
             span
                 color: dodgerblue
                 font-weight: bold
@@ -187,6 +214,57 @@ body
             color: white
             font-weight: bold
             width: 200px
+        h2,
+        form
+            margin-left: 60px
+        h2 
+            margin-bottom: 50px
+            font-size: 60px
+        .signup-form,
+        .login-form
+            width: 50vw
+            &__username,
+            &__password
+                display: flex
+                flex-direction: column
+                text-transform: uppercase
+                font-size: 12px
+                margin: 20px 0px
+                input
+                    border: none
+                    border-bottom: 1px solid white
+                    background: none
+                    width: 50%
+                    margin: 20px 0px
+                    &:focus
+                        outline: none
+            &__button
+                margin: 20px 0px
+                .signup-button,
+                .login-button
+                    margin-right: 30px
+                    background: dodgerblue
+                    border: none
+                    padding: 10px 30px
+                    color: white
+                    font-weight: bold
+    &__right
+        left: 50%
+        z-index: 10000
+    &__left
+        left: 0px
+        width: 0
+        z-index: 10000
+        background: #2C3034
+        color: white
+    .hideElement
+        width: 0px
+        right: 50%
+        transition-duration: 1s
+    .showElement
+        width: 50%
+        left: 0px
+        transition-duration: 1s
 .slide-login 
     width: 50%
     max-height: 100%
